--- a/_posts/2022-04-03-AdvancedMod020.md
+++ b/_posts/2022-04-03-AdvancedMod020.md
@@ -1,5 +1,5 @@
 ---
-layout: article
+layout: post
 title: "AdvancedMod测试版v0.2.0发布"
 date: 2022-04-03 11:32:04 -0000
 categories: Terraria Mod tModLoader DevRelease
